[code-style] trailing comma

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,18 @@ AllCops:
     - examples/Gemfile
     - examples/**/*.rb
 
+Style/TrailingCommaInArguments:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInArrayLiteral:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInHashLiteral:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
+
 Metrics/AbcSize:
   Max: 40
 
